revert to working version