@@ -13,7 +13,6 @@ import java.lang.reflect.Field;
 
 public class JukeboxAudioEngine {
     private static final JukeboxAudioEngine INSTANCE = new JukeboxAudioEngine();
-    public static boolean FORCE_PLAYING_FLAG = false;
     private Player player;
     private Thread musicThread;
     private float volume = 1.0f;
@@ -23,35 +22,41 @@ public class JukeboxAudioEngine {
     }
 
     public void play(File musicFile) {
-        stop();
-        FORCE_PLAYING_FLAG = true; // Set flag when starting
-        musicThread = new Thread(() -> {
-            try (FileInputStream fis = new FileInputStream(musicFile)) {
-                player = new Player(new BufferedInputStream(fis));
-                setVolume(this.volume);
-                player.play();
-            } catch (Exception e) {
-                FORCE_PLAYING_FLAG = false;
-            } finally {
-                FORCE_PLAYING_FLAG = false; // Clear flag when song ends
-            }
-        });
-        musicThread.setDaemon(true);
-        musicThread.start();
+        stop(); // Ensure old music is dead
+        if (musicFile != null && musicFile.exists()) {
+            musicThread = new Thread(() -> {
+                try (FileInputStream fis = new FileInputStream(musicFile)) {
+                    player = new Player(new BufferedInputStream(fis));
+                    setVolume(volume); // Apply current volume
+                    player.play();
+                } catch (Exception e) {
+                    System.out.println("Jukebox stream closed.");
+                }
+            });
+            musicThread.setDaemon(true);
+            musicThread.start();
+        }
     }
 
     public void stop() {
-        FORCE_PLAYING_FLAG = false; // Clear flag
-        if (player != null) { player.close(); player = null; }
-        if (musicThread != null) { musicThread.interrupt(); musicThread = null; }
+        if (player != null) {
+            player.close();
+            player = null;
+        }
+        if (musicThread != null) {
+            musicThread.interrupt();
+            musicThread = null;
+        }
     }
 
     public boolean isPlaying() {
-        return player != null && musicThread != null && musicThread.isAlive();
+        // FIX: Removed 'player != null' check to avoid race conditions
+        // while the audio stream is taking a few milliseconds to initialize.
+        return musicThread != null && musicThread.isAlive();
     }
 
     public void setVolume(float targetVolume) {
-        this.volume = Math.clamp(targetVolume, 0.0f, 1.0f);
+        this.volume = Math.max(0.0f, Math.min(1.0f, targetVolume));
         if (player != null) {
             try {
                 Field deviceField = Player.class.getDeclaredField("audio");
@@ -65,31 +70,11 @@ public class JukeboxAudioEngine {
 
                     if (source != null && source.isControlSupported(FloatControl.Type.MASTER_GAIN)) {
                         FloatControl gainControl = (FloatControl) source.getControl(FloatControl.Type.MASTER_GAIN);
-
-                        float dB = getDB(gainControl, this.volume);
-
+                        float dB = (float) (Math.log(this.volume <= 0.0f ? 1.0e-4f : this.volume) / Math.log(10.0f) * 20.0f);
                         gainControl.setValue(dB);
                     }
                 }
-            } catch (Exception e) {
-                // If it fails, print it to the console so we aren't flying blind!
-                System.err.println("Failed to set Jukebox volume: " + e.getMessage());
-            }
+            } catch (Exception ignored) {}
         }
-    }
-
-    private static float getDB(FloatControl gainControl, float volume) {
-        float dB;
-        if (volume <= 0.0f) {
-            // If volume is 0, drop it to the absolute minimum the hardware allows (mute)
-            dB = gainControl.getMinimum();
-        } else {
-            // Standard amplitude to decibel conversion
-            dB = (float) (Math.log10(volume) * 20.0f);
-        }
-
-        // CLAMP the value so we never throw an IllegalArgumentException
-        dB = Math.clamp(dB, gainControl.getMinimum(), gainControl.getMaximum());
-        return dB;
     }
 }
